lab1/Test/L1-A-12-21.output
Error Type B at Line 6
Error Type A at Line 13
Error Type A at Line 19
Error Type A at Line 24
Error Type A at Line 47
