lab1/Test/L1-A-12-21.cmm
struct {
  float XVinD5yBe4OWpn5Kx , hBzBpb5Gr = K && zlM <= 
    y9anw0 + nv * ! - s9pDYDUSAdX5gxu6 [ E = vH || VNCxke9X0V5MS 
    < IxeqysMZplVPZiBP - ! OUpJwN8A__s0_ ( F4uJVotuZUuak_dhx 
    || xDDeVUP1JyON_ToMgud > J + eKJAowBiCdI4 [ DXe = 
    rGLVd4dskJl5bUqy >= V660TeI7utS2hmZprx - - - ( != 
    whyruyhhQQ_3a - LNJOcU [ fxnLsy = cHvDxCmm || ZfKZ0h 
    ( UJgjHgGp_1Gop , B0LSFwFhz6ck0GQ ) || Taupi3rhWzrWU 
    / 383574796.1672944000 * ULLwwT7HoTt ] . d2uJDqrgPPYjFd2Bna9O 
    ) ] . FBqr . Jv == i0ZuoKwh3 ( ) ) / - ! 1481889628 
    ] ;
};
\int z18x [ 1692135894 ] 
;
int GJkTeN2VFC1 ( ) {
  struct PE Y973uNknTAkk3g8Mw ;
}
int ;
int IZ6nlleM4aeoKQ7B ( int Xt5j3 , int ~B0Jg0t6SBNQp_mdkAU 
  ) {
  int v0kC8x741Z1dlX ;
  struct whYJrVZekeuhzx {
    struct D98HbRO mJ7jSBe3N ;
  }F7QnMQKiQPf6eVy3qB ;$
  int gc55eLD224pLugfc ;
  int cyh3w ;
  struct eeyxT_B9kxcA h3dNS ;
  if ( LmXB1qWVAhdMqGXxs8M )   while ( evks6QquY72nbWV5NOFq 
    ) {
  }
else   if ( XTfXEsLi686UIc )   g ;


}
int urdEnpEhccRtu , YyuSnckF_fWwYgQ2 

;
int ;
int ;
int ;
int ;
int tj6tra03I6xd4TPRnBv6 ( ) {
  if ( CxmlMn )   p_wb1QDpH02MNJMYZ ;
else   return n5gFQfed ;

}
^